--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/editProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/editProduct.html
@@ -117,8 +117,12 @@
                     <div class="mb-3">
                         <label class="form-label">Ảnh Sản Phẩm</label>
                         <input type="file" name="files" multiple accept="image/*" class="form-control" id="imageUpload">
+<!--                        <div id="imagePreview" class="mt-2">-->
+<!--                            <img id="previewImage" th:src="${product.mainImageUrl}" width="100" height="100" alt="Ảnh sản phẩm">-->
+<!--                        </div>-->
+                        <input type="hidden" name="imagePaths" id="imagePaths" th:field="*{mainImageUrl}">
                         <div id="imagePreview" class="mt-2">
-                            <img id="previewImage" th:src="${product.mainImageUrl}" width="100" height="100" alt="Ảnh sản phẩm">
+                            <img th:src="${mainImageUrl}" class="img-preview" >
                         </div>
                     </div>
 
@@ -261,18 +265,19 @@
 <!-- JavaScript Preview Image -->
 <script>
     document.getElementById("imageUpload").addEventListener("change", function(event) {
-        let preview = document.getElementById("imagePreview");
-        preview.innerHTML = "";
-        Array.from(event.target.files).forEach(file => {
+        let previewImg = document.querySelector("#imagePreview img");
+        let imagePathsInput = document.getElementById("imagePaths");
+        if (event.target.files.length > 0) {
+            let file = event.target.files[0];
             let reader = new FileReader();
+
             reader.onload = function(e) {
-                let img = document.createElement("img");
-                img.src = e.target.result;
-                img.className = "img-preview";
-                preview.appendChild(img);
+                previewImg.src = e.target.result;
+                imagePathsInput.value = e.target.result;
             };
+
             reader.readAsDataURL(file);
-        });
+        }
     });
 </script>
 
